[package]
name = "ashen"
version = "0.1.0"
authors = ["James R <71466513+ColdIce1605@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
vk-mem = "0.2.2"
winit = "0.24.0"
image = "0.10.4"
glam = "0.12.0"