[package]
name = "ashen"
version = "0.1.0"
authors = ["James R <71466513+ColdIce1605@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = "Vulkan"

[dependencies]
async-executor = "1.4.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.8.3"
futures = "0.3"
glam = "0.12.0"
image = "0.10.4"
log = "0.4"
pollster = "0.2.3"
winit = "0.24.0"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs/"}

