[package]
name = "ashen"
version = "0.1.0"
authors = ["James R <71466513+ColdIce1605@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = "Vulkan"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.5", features = [ "derive" ] }
glam = {version = "0.14.0", features = ["bytemuck"] }
env_logger = "0.8"
log = "0.4"
futures = "0.3"
image = "0.23"
wgpu = "0.8"
winit = "0.24"